Spacing fix

--- a/angular/src/styles/app.css
+++ b/angular/src/styles/app.css
@@ -14318,6 +14318,9 @@ iframe,
 .projects-tiles .tiles-view-pf .tile-content {
   overflow: hidden;
 }
+.projects-tiles .tile-title .cfme-icon-label {
+  padding-left: 5px;
+}
 .projects-tiles .tile-row {
   padding: 0;
   margin: 0;
