--- a/angular/src/styles/less/main.less
+++ b/angular/src/styles/less/main.less
@@ -21,6 +21,10 @@
   overflow: hidden;
 }
 
+.projects-tiles .tile-title .cfme-icon-label {
+  padding-left: 5px;
+}
+
 .projects-tiles .tile-row {
   padding: 0;
   margin: 0;
